# backend

./: Dockerfile  README.md  pyproject.toml
src/: main.py
src/api/: main.py
src/api/routes/heroes/: router.py  schemas.py
src/parsers/protracker/: api.py  base.py  utils.py
